# rstrace

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish.yml  release.yml
assets/: kernel.tef.json  userspace.tef.json
crates/rstrace/: Cargo.toml
crates/rstrace-cuda-sniff/: Cargo.toml  build.rs
crates/rstrace-cuda-sniff/src/: lib.rs
crates/rstrace/src/: info.rs  lib.rs  main.rs  ptrace.rs  statistics.rs  tef.rs  terminal.rs
crates/rstrace/tests/: strace_test.rs
scripts/: install.sh
src/: cuda_sniff.rs  info.rs  lib.rs  main.rs  ptrace.rs  statistics.rs  tef.rs  terminal.rs
tests/: gpu.sh  modal_ci.py  strace_test.rs
