[package]
name = "strace-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitflags = "2.5.0"
lazy_static = "1.4.0"
libc = "0.2.139"
nix = { version = "0.28.0", features = ["process", "ptrace"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
bindgen = "0.65.1"

[features]
cuda_sniff = []
default = ["cuda_sniff"]
