[package]
name = "rstrace-cuda-sniff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }

[build-dependencies]
bindgen = "0.65.1"

[lib]
doctest = false # https://github.com/rust-lang/rust-bindgen/issues/1313
