[package]
name = "rstrace-cuda-sniff"
description = "A utility crate for rstrace to sniff CUDA API calls."
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/thundergolfer/strace-rs"
repository = "https://github.com/thundergolfer/strace-rs"
readme = "../../README.md"
keywords = ["strace", "syscall", "CUDA", "tracing"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }

[build-dependencies]
bindgen = "0.65.1"

[lib]
doctest = false # https://github.com/rust-lang/rust-bindgen/issues/1313
